# codexspec

./: .codespellrc  .gitignore  .mailmap  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-hooks-README.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  listen_claude_code.md  mkdocs.yml  publish.sh  pyproject.toml
.agents/skills/codexspec-config/: SKILL.md
.agents/skills/codexspec-constitution/: SKILL.md
.agents/skills/codexspec-generate-spec/: SKILL.md
.agents/skills/codexspec-implement-tasks/: SKILL.md
.agents/skills/codexspec-plan-to-tasks/: SKILL.md
.agents/skills/codexspec-review-code/: SKILL.md
.agents/skills/codexspec-spec-to-plan/: SKILL.md
.agents/skills/codexspec-specify/: SKILL.md
.agents/skills/source-command-codexspec-generate-spec/: SKILL.md
.claude-plugin/: marketplace.json
.claude/commands/: codexspec.checklist.md  codexspec.clarify.md  codexspec.commit-staged.md  codexspec.tasks-to-issues.md
.claude/commands/codexspec/: analyze.md  check-i18n-semantics.md  checklist.md  clarify.md  commit-staged.md  commit.md  constitution.md  generate-spec.md  plan-to-tasks.md  pr.md  review-plan.md  review-python-code.md  review-react-code.md  review-spec.md  review-tasks.md  spec-to-plan.md  specify.md  translate-docs.md
.codex/skills/codexspec-quick/: SKILL.md
.codexspec/: config.yml
.codexspec/commands/: implement-tasks.md  plan-to-tasks.md  pr.md  quick.md  spec-to-plan.md
.codexspec/memory/: constitution.md
.codexspec/scripts/bash/: create-new-feature.sh
.codexspec/specs/2026-0225-1652ii-pr-description-generator/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0228-1112vx-constitution-compliance-enhancement/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0301-223625-constitution-auto-import/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0302-1759re-command-organization-optimization/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0304-14502a-github-pages-i18n/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0309-2217h8-claude-monitor-state-detection/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0312-1544jt-notify-script-logging-optimization/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0312-1750j9-cli-i18n-support/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0316-1647mx-interactive-language-selection/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.codexspec/specs/2026-0316-2310yk-pre-commit-enhancement/: plan.md  review-plan.md  review-spec.md  review-tasks.md  spec.md  tasks.md
.github/workflows/: ci.yml  docs-i18n.yml  docs.yml
docs/: WINDOWS-TROUBLESHOOTING.md
docs/case-studies/: case-study-pr-description-generator.md
docs/de/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/de/development/: contributing.md  (+1 more)
docs/en/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/es/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/fr/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/getting-started/: quick-start.md
docs/guides/: case-study-pr-description-generator.md
docs/i18n/: glossary.yml
docs/internal/: claude_code_message_and_render_content.txt  repository-layout.md
docs/ja/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/ko/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/plans/: 2025-02-19-mkdocs-documentation-design.md  2025-02-19-mkdocs-implementation.md  2026-03-10-frontmatter-translation-design.md
docs/pt-BR/: WINDOWS-TROUBLESHOOTING.md  index.md
docs/reference/: cli.md  configuration.md
docs/user-guide/: commands.md  i18n.md
docs/zh/: WINDOWS-TROUBLESHOOTING.md  index.md
extensions/: EXTENSION-DEVELOPMENT-GUIDE.md  catalog.json
extensions/template/: extension.yml
hooks/: post_build.py
internal/: google_search_console.py
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  review-context.ps1
scripts/python/: README.md  claude_auto_responder.en.md  claude_auto_responder.py  claude_auto_responder.zh-CN.md  claude_auto_responder_demo.en.md  claude_auto_responder_demo.zh-CN.md  claude_ctl.py  claude_monitor.py  notify_telegram.py
src/codexspec/: __init__.py  i18n.py  idea.md  translator.py
templates/commands/: analyze.md  check-i18n-semantics.md  checklist.md  clarify.md  commit-staged.md  commit.md  config.md  constitution.md  generate-spec.md  implement-tasks.md  plan-to-tasks.md  pr.md  quick.md  review-code.md  review-plan.md  review-python-code.md  review-react-code.md  review-spec.md  review-tasks.md  spec-to-plan.md  specify.md  tasks-to-issues.md  translate-docs.md
templates/docs/: checklist-template.md  constitution-template.md  plan-template-detailed.md  plan-template-simple.md  requirements-template.md  spec-template-detailed.md  spec-template-simple.md  tasks-template-detailed.md  tasks-template-simple.md
templates/translations/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  zh-CN.json
tests/: __init__.py  conftest.py  review_context_cases.py  test_cli.py  test_cli_i18n.py  test_codex_integration.py  test_compliance.py  test_config_auto_next.py  test_i18n.py  test_i18n_glossary.py  test_init_codex.py  test_init_compliance.py  test_init_language.py  test_package_contents.py  test_pr_template.py  test_review_code_docs.py  test_review_code_eval.py  test_review_code_templates.py  test_sdd_workflow_templates.py  test_translation_files.py  test_translator.py
tests/commands/: test_installer.py
tests/evals/: __init__.py
tests/hooks/: conftest.py  test_html_sitemap.py
tests/scripts/: __init__.py  conftest.py
(+278 files in other folders)
