[project]
name = "codexspec"
version = "0.2.1"
description = "CodexSpec - A Spec-Driven Development (SDD) toolkit for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CodexSpec Team" }
]
keywords = ["sdd", "spec-driven-development", "claude", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "platformdirs>=4.0.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
]

[project.urls]
Homepage = "https://github.com/Zts0hg/codexspec"
Repository = "https://github.com/Zts0hg/codexspec"
Issues = "https://github.com/Zts0hg/codexspec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
codexspec = "codexspec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexspec"]
force-include = { "templates" = "codexspec/templates", "scripts" = "codexspec/scripts" }

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/scripts",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
