[project]
name = "codexspec"
version = "0.4.3"
description = "CodexSpec - A Spec-Driven Development (SDD) toolkit for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "CodexSpec Team" }
]
keywords = ["sdd", "spec-driven-development", "claude", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "platformdirs>=4.0.0",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Zts0hg/codexspec"
Repository = "https://github.com/Zts0hg/codexspec"
Issues = "https://github.com/Zts0hg/codexspec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-static-i18n>=1.0.0",
]
monitor = [
    "watchdog>=3.0.0",
]

[project.scripts]
codexspec = "codexspec:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codexspec"]
force-include = { "templates" = "codexspec/templates", "scripts" = "codexspec/scripts" }

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/templates",
    "/scripts",
    "/codexspec-icon.svg",
    "/codexspec-logo-dark.svg",
    "/codexspec-logo-light.svg",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/codexspec"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603", "B607"]
